[M2C-1887][Top-indicator] Fixes blurry bottom edge on FF

--- a/src/components/indicators/_indicators.scss
+++ b/src/components/indicators/_indicators.scss
@@ -80,6 +80,7 @@ $namespace: 'cs-';
         left: 0;
         box-shadow: none !important;
         margin-left: 1.2rem !important;
+        line-height: 1.4rem;
     }
 
     &__fast-shipping,
